syntax = "proto3";

import "validate/validate.proto";

option go_package = "./pbidentifier";

package identifier;

service Identifier {
  rpc ValidateLicense (ValidateLicenseRequest) returns (ValidateLicenseResponse) {}
  rpc InferLicenseByFullname (InferLicenseByFullnameRequest) returns (InferLicenseByFullnameResponse) {}
}

message ValidateLicenseRequest{
  string category = 1;
  uint64 dni = 2;
  uint64 license = 3;
}

message ValidateLicenseResponse{
  bool valid = 1;
}

message InferLicenseByFullnameRequest{
  string category = 1;
  string name = 2;
  string surname = 3;
}

message InferLicenseByFullnameResponse{
  uint64 license = 1;
}


